--- a/python/msgraph/requirements.txt
+++ b/python/msgraph/requirements.txt
@@ -1,4 +1,4 @@
---index-url https://pypi.python.org/simple
-azure-identity==1.3.1
 --index-url https://test.pypi.org/simple
-msgraphcore==0.0.2
+msgraphcore
+--index-url https://pypi.python.org/simple
+azure-identity
